// 定义公用的结构、变量等（服务器、客户端公用）
package proto_ff;

// calm 自定义的fieldoption都在该文件中
import "yd_fieldoptions.proto";
import "common_logic.proto";


enum PingConfig
{
  option allow_alias  = true;
  CLIENT_PING_INTERVAL = 9;					// 客户端发ping包的间隔(s)
  SERVER_PING_INTERVAL = 9;					// 服务端之间发ping包的(s) （由于网络底层采用LRU机制超时，客户端和服务的超时时间需要一致，待后期分开后再改小点）
};

//角色性别
enum ECharacterSex{
  ECHARACTER_SEX_MAN = 1;		//男性
  ECHARACTER_SEX_FEMAL = 2;	//女性
}

//种族
enum ERace
{
  ERace_Human = 1;		//人族
  ERace_Fairy = 2;		//精灵
}

//角色职业
enum ECharacterProf{
  ECHARACTER_PROF_WARRIOR		= 1;		//战士
  ECHARACTER_PROF_MAGICIAN	= 2;		//法师
  ECHARACTER_PROF_ASSASSIN	= 3;		//刺客
  ECHARACTER_PROF_ARCHER		= 4;		//弓手
}

// 游戏货币类型
enum CurrencyType
{
  VALUE_CURRENCY_NULL         = 0;
  VALUE_CURRENCY_SILVER       = 1;			// 银币
  VALUE_CURRENCY_GOLD         = 2;			// 金币
  VALUE_CURRENCY_BIND_GOLD    = 3;			// 绑定金币
  VALUE_CURRENCY_REPUTATION   = 5;			// 声望
}

//区域类型
enum AreaType
{
  en_AreaType_Common		= 0;//常规区域
  en_AreaType_Safe		= 1;//安全区
  en_AreaType_Dup			= 2;//副本内部传送区域：仅针对同一个副本内部使用
}

// 导航网格行动标志
enum SamplePolyFlags
{
  SAMPLE_POLYFLAGS_WALK		    = 0x01;		// 行走
  SAMPLE_POLYFLAGS_SWIM		    = 0x02;		// 游泳
  SAMPLE_POLYFLAGS_FORBIT_ACROSS  = 0x04;		// 禁止轻功跨障碍
  SAMPLE_POLYFLAGS_DOOR			= 0x08;		// Ability to move through doors.
  SAMPLE_POLYFLAGS_DISABLED	    = 0x10;		// 无效
  SAMPLE_POLYFLAGS_ALL		    = 0xffff;
};
//地图导航网格数量和路径点数量定义
enum MapDefine
{
  option allow_alias			= true;
  MAX_NAV_POLYS				= 3076;			//1024 * 3
  MAX_NAV_POINT_VALUE			= 1024;			//
  INVALID_NAVMESH_POLYREF		= 0;
};

enum REGION_DEFINE
{
  option allow_alias			= true;
  DEFAULT_REGION_WIDTH		= 18;			// 默认region宽度
  DEFAULT_REGION_HEIGHT		= 18;			// 默认region高度
};

enum CharacterDefine
{
  option allow_alias = true;
  MAX_CREATE_CHARACTER_COUNT	= 3;			// 最大可创建的角色数量（合服时可能超出这个数量）
  CHARACTER_NAME_MIN_LENGTH	= 4;			// 最短角色名字节数，注意utf8编码一个汉字通常占3字节
  CHARACTER_NAME_MAX_LENGTH	= 32;			// 最长角色名字节数
};


enum EItemType
{
  EItemType_None = 0;		//无
  EItemType_Equip = 1;	//装备物品，配置在 equip.xlsx表的物品在数据结构上都属于这一类
  EItemType_Material = 2;	//养成材料类
  EItemType_Other = 3;	//其它类
  EItemType_Task = 4;		//任务物品类
  EItemType_Star = 5;		//命星类
  EItemType_Soul = 6;		//灵魂类
  EItemType_FaiMateri = 7;//领域材料类
  EItemType_FaiCrystal = 8;//仙阵水晶类
  EItemType_Symbol = 9;	//符印类
  EItemType_BossIdentify = 10;//BOSS图鉴类
  EItemType_FaiIdentify = 11;//仙阵图鉴类

  EItemType_Limit = 12;
};

//包裹类型
enum EPackageType
{
  EPackageType_None = 0;
  EPackageType_Common = 1;	//背包
  EPackageType_Storage = 2;	//仓库
  EPackageType_Task = 3;		//任务
  EPackageType_Star = 4;	//命星
  EPackageType_Soul = 5;		//灵魂
  EPackageType_FaiMateri = 6;//仙阵材料
  EPackageType_FaiCrystal = 7;	//仙阵水晶
  EPackageType_Symbol = 8;		//符印
  EPackageType_BossIdentify = 9;	//BOSS图鉴包
  EPackageType_FaiIdentify = 10;	//仙阵图鉴包

  EPackageType_Limit = 11;
};

//品质
enum EQuality
{
  option allow_alias = true;

  EQuality_grey	= 1;	//灰
  EQuality_white	= 2;	//白
  EQuality_green	= 3;	//绿
  EQuality_blue	= 4;	//蓝
  EQuality_purple = 5;	//紫
  EQuality_orange = 6;	//橙
  EQuality_red	= 7;	//红
  EQuality_gold	= 8;	//金
}



//装备位置定义 1.武器；2.服饰；3.帽子；4披风；5.裤子；6.鞋子；7.项链；8.戒指；9星环；10.圣徽
enum EEquipPos
{
  option allow_alias = true;
  EEquipPos_none				= 0;
  EEquipPos_weapon			= 1;	//武器
  EEquipPos_clothes			= 2;	//服饰
  EEquipPos_hat				= 3;	//帽子
  EEquipPos_cloak				= 4;	//披风
  EEquipPos_pants				= 5;	//裤子
  EEquipPos_shoe				= 6;	//鞋子
  EEquipPos_necklace			= 7;	//项链
  EEquipPos_ring				= 8;	//戒指
  EEquipPos_thering			= 9;	//星环
  EEquipPos_holysymbols		= 10;	//圣徽
  EEquipPos_guarddef			= 11;	//防御守护
  EEquipPos_guardexp			= 12;	//经验守护
  EEquipPos_marryEquip1		= 13;	//结婚装备1
  EEquipPos_marryEquip2		= 14;	//结婚装备2
  EEquipPos_limit				= 15;
}


enum EConst
{
  EConst_ServerUpdateTime = 1;				//服务器更新时间
}


//返回码（公用的返回码放到前面，模块相关的返回码放到后面）
enum ERetCode
{
  option allow_alias = true;
  //公用返回码 0 - 99
  RET_SUCCESS				= 0;	//成功
  RET_FAIL				= 1;	//失败
  RET_LEVEL_LACK			= 2;	//等级不足
  RET_MONEY_LACK			= 3;	//金钱不足
  RET_GOLD_LACK			= 4;	//金币不足
  RET_BIND_GOLD_LACK		= 5;	//绑定金币不足
  RET_DIAMOND_LACK		= 6;	//钻石不足
  RET_BIND_DIAMOND_LACK	= 7;	//绑定钻石不足
  RET_VIP_LEVEL_LACK		= 8;	//vip等级不足
  RET_PROF_ERROR			= 10;	//职业错误
  RET_PLAYER_NOT_ONLINE	= 11;	//玩家不在线
  RET_RACE_ERROR			= 12;	//种族错误
  RET_SEX_ERROR			= 13;	//性别错误
  RET_NOT_ONLINE			= 14;	//不在线
  RET_DATA_ERROR			= 15;	//角色数据异常
  RET_NOT_HAVE_CHARACTER  = 16;	//角色不存在
  RET_BAG_FULL			= 17;	//背包满了
  RET_PARMAR_ERROR		= 18;	//提交参数错误
  RET_CONFIG_ERROR		= 19;	//配置错误
  RET_OTHER_LEVEL_LACK	= 20;	//对方等级不足
  RET_ID_UNKNOW			= 21;	//未知ID
  RET_REPEATED_OPERATE	= 22;	//不可重复操作
  RET_UNAVAILABLE			= 23;	//不可用
  RET_FIGHT_LACK			= 24;	//战力不足
  RET_APTITUDE_LACK		= 25;	//境界不走
  RET_OVER_MAX_NUM		= 26;	//超过最大次数
  RET_PRICE_ERROR			= 27;	//价格不对
  RET_OTHER_NOT_ONLINE	= 28;	//对方不在线
  RET_STAR_ESSENCE_LACK	= 29;	//命星精华不足
  RET_STAR_LAYER_LIMIT	= 30;	//命星塔层数限制
  RET_OCCUPATION_ERROR	= 31;	//转职职业错误
  RET_SMALL_SPIRIT_LACK	= 32;	//小灵魄不足
  RET_SMALL_BIG_LACK		= 33;	//大灵魄不足
  RET_ITEM_PARAM_ERROR	= 34;	//物品参数错误
  RET_CAN_NOT_RECONNECT	= 35;	//不能重连
  RET_DISALLOW_ENTER_GAME	= 36;	//不允许进入游戏
  RET_MATERIAL_LACK		= 37;	//材料不足(通用的错误提示码)
  RET_HOLY_DIAMOND_LACK	= 38;	//神钻不足

  //登录 100 - 199
  RET_LOGIN_BAD_USER_NAME_LEN		= 100;		//用户名长度错误
  RET_LOGIN_CHARACTER_NOT_EXITS   = 101;		//角色不存在
  RET_LOGIN_ACCOUNT_OTHER_LOGIN   = 102;		//账号异地登录
  RET_LOGIN_CHARACTER_NUM_LIMIT	= 103;		//角色数量超过上限
  RET_LOGIN_CHARACTER_NAME_EXISTS	= 104;		//名字已存在
  RET_LOGIN_CHARACTER_SEX_ERROR	= 105;		//性别错误
  RET_LOGIN_CHARACTER_PROF_ERROR	= 106;		//职业错误
  RET_LOGIN_CHARACTER_NAME_LEN_ERROR = 107;	//名字长度错误
  RET_LOGIN_CHARACTER_CREATE_FAILED = 108;	//创建角色失败
  RET_LOGIN_CHARACTER_NOT_ACCOUNT		= 109;	//帐号不存在
  RET_LOGIN_CHARACTER_ILLEGAL			= 110;	//名字有非法字符
  RET_LOGIN_CHARACTER_VESION_ERR		= 111;	//版本号不对
  RET_LOGIN_ACCOUNT_SYSTEM_MAINTENANCE= 112;	//全服系统维护
  RET_LOGIN_ILLEGAL_REQUEST			= 113;  //非法登陆请求
  RET_LOGIN_CHANNEL_FAIL				= 114;  //渠道登陆失败
  RET_LOGIN_ORBIDDEN_ACCOUNT			= 115;  //帐号封号中
  RET_LOGIN_QUEUE_ENOUGHT_NUM			= 116;	//排队人数已满
  RET_LOGIN_HAS_DELETE_CHAR			= 117;	//该帐号已删除
  RET_LOGIN_TIME_OUT      			= 118;	//登陆超时
  RET_TOKEN_ERROR						= 119;	//登陆游戏服时间过长
  RET_ACCOUNT_FULL					= 120;	//游戏服注册人数已满
  RET_NOT_OPEN_TIME					= 121;	//没到开服时间
  RET_CAN_NOT_RETURN_ROLE_LIST		= 122;	//不能返回角色列表界面
}


//中心服通知下线类型
enum LOGOUT_TYPE
{
  LOGOUT_NONE				= 0;					//无
  LOGOUT_LOGOUT			= 1;					//正常下线
  LOGOUT_KICK_OUT			= 2;					//被踢下线
  LOGOUT_REPLACE			= 3;					//别处登陆,被挤下线
  LOGOUT_DIS_TIME_OUT		= 4;					//断开超时下线
  LOGOUT_CHANGE_LOGIC		= 5;					//切换逻辑节点
  LOGOUT_RETURN_ROLE_LIST	= 6;					//返回角色列表界面
  LOGOUT_LOGIN_TIME_OUT	= 7;					//登录超时

  LOGOUT_WEB_KICK		= 8;					// 管理后台T人
  LOGOUT_CHEAR_KICK	= 9;					// 作弊被T
  LOGOUT_CRASH		= 10;					// 逻辑服挂了
  LOGOUT_OTHER		= 11;					// 其它原因被T
}


//登录角色信息
message LoginRoleProto
{
  required uint64 cid 			= 1;
  required string name            = 2;   		// 名字
  required uint32 prof            = 3;   		// 职业
  required uint32 level           = 4;   		// 等级
  optional uint64 fight			= 5;   		// 战斗力
}
